# websocket-FastAPI-githuboAuth2

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  main.py  schemas.py
src/dependencys/: __init__.py  logger.py  users.py
src/routers/: auth.py  number_sender.py
src/services/: redis_client.py
src/templates/: main.html
