[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["shutov.da <shutov.da@infotek.tu>"]
readme = "README.md"
packages = [{include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
