[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["shutov.da <shutov.da@infotek.tu>"]
readme = "README.md"
packages = [{include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
sse-starlette = "^2.1.3"
jinja2 = "^3.1.4"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
